@@ -9,6 +9,7 @@ IMPORTANT INCLUSIONS (Selenium HTML 5 Support)
 
 * com.github.qacore.testingtoolbox.selenium.html5.JSLocalStorage
 * com.github.qacore.testingtoolbox.selenium.html5.JSApplicationCache
+* com.github.qacore.testingtoolbox.selenium.html5.JSSessionStorage
 
 IMPORTANT CHANGES
 
